GNOME Bugzilla – Bug 163939
GdkPixbuf-CRITICAL on new graph.
Last modified: 2005-01-14 05:29:49 UTC
1. Enter 1, 2, 3 in A1:A3 and select. 2. Press Graph. 3. Press Insert. 4. Click and... 5. ...drag to mark an area. Between 4 and 5 I get... Breakpoint 1, g_log (log_domain=0xfb335208 "GdkPixbuf", log_level=G_LOG_LEVEL_CRITICAL, format=0xfaae24a8 "%s: assertion `%s' failed") at gmessages.c:507 507 g_logv (log_domain, log_level, format, args);
+ Trace 54467
** (gnumeric:4275): WARNING **: Chart is too large
Note, that you need to run the debugger from another X server. The breakpoint is hit with a active grab.
You don't even have to drag. A simple click which should give you a graph with default size shows the same message. There's two problem here. First is probably related to #162631, where a graph with a null size is created. And we should not try to create a null sized pixbuf in gog_renderer_pixbuf_update.
patched.