http://bugzilla.gnome.org/show_bug.cgi?id=163939 zero sized views are not

2005-01-14  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=163939
	* graph/gog-renderer-pixbuf.c (gog_renderer_pixbuf_update) : zero
	  sized views are not relevent, and does not require any redrawing.